--- a/environment.yaml
+++ b/environment.yaml
@@ -5,12 +5,14 @@ dependencies:
 - cmake
 - doxygen
 - furo
+- gmatelastic >=0.5.0
 - gmattensor >=0.10.2
 - h5py
 - ninja
 - numpy
 - pybind11
 - python
+- python-gmatelastic >0.5.0
 - python-gmattensor >0.9.0
 - qpot >=0.12.1
 - scikit-build
