--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
 
 option(BUILD_ALL "${PROJECT_NAME}: Build Python API & docs" OFF)
 option(BUILD_PYTHON "${PROJECT_NAME}: Build Python API" OFF)
-option(BUILD_DOCS "${PROJECT_NAME}: Build docs" OFF)
+option(BUILD_DOCS "${PROJECT_NAME}: Build docs (use `make html`)" OFF)
 option(USE_ASSERT "${PROJECT_NAME}: Build with assertions" ON)
-option(USE_DEBUG "${PROJECT_NAME}: Build in debug mode" OFF)
+option(USE_DEBUG "${PROJECT_NAME}: Build with debug assertions" OFF)
 option(USE_SIMD "${PROJECT_NAME}: Build with hardware optimization" OFF)
 
 if(SKBUILD)
@@ -131,6 +131,7 @@ if(BUILD_PYTHON OR BUILD_ALL)
 
     target_compile_definitions(${PYPROJECT_NAME} PUBLIC VERSION_INFO=${PROJECT_VERSION})
     target_link_libraries(${PYPROJECT_NAME} PUBLIC ${PROJECT_NAME} xtensor-python)
+    target_link_libraries(${PYPROJECT_NAME} PUBLIC ${PROJECT_NAME}::compiler_warnings)
 
     if (SKBUILD)
         target_include_directories(${PYPROJECT_NAME} PUBLIC ${NumPy_INCLUDE_DIRS})
@@ -209,12 +210,10 @@ if(BUILD_DOCS OR BUILD_ALL)
     set(DOXYGEN_GENERATE_XML YES)
     set(DOXYGEN_QUIET YES)
     set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
-    set(DOXYGEN_WARN_AS_ERROR NO)
+    set(DOXYGEN_WARN_AS_ERROR YES)
     set(DOXYGEN_HTML_COLORSTYLE TOGGLE)
-    set(DOXYGEN_WARN_LOGFILE "${CMAKE_CURRENT_BINARY_DIR}/doxygen_warnings.log")
     set(DOXYGEN_ALIASES "license=@par License:")
     set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md")
-
     set(DOXYGEN_STRIP_FROM_INC_PATH ${${PROJECT_NAME}_DOCS_STRIP_INC})
     set(DOXYGEN_STRIP_FROM_PATH ${${PROJECT_NAME}_DOCS_STRIP})
     doxygen_add_docs(html ${${PROJECT_NAME}_DOCS_INCL} "README.md")
